--- a/app/src/main/res/layout/scholarship_page1.xml
+++ b/app/src/main/res/layout/scholarship_page1.xml
@@ -24,7 +24,8 @@
             android:layout_width="89dp"
             android:layout_height="111dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/sch_phinmalogo" />
+            app:srcCompat="@drawable/sch_phinmalogo"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,36 +42,47 @@
             android:gravity="center"
             android:text="@string/scholarship_description"
             android:textColor="@color/white"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            tools:ignore="TextSizeCheck" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="300dp"
             android:layout_height="125dp"
-            app:srcCompat="@drawable/sch_hands" />
+            app:srcCompat="@drawable/sch_hands"
+            tools:ignore="ContentDescription" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="137dp"
+        android:layout_marginTop="10dp"
         android:gravity="top"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="68dp"
-            android:fontFamily="@font/montserrat_bold"
+            android:fontFamily="@font/josefin_sans_bold"
             android:gravity="center"
             android:text="@string/sch_descriptionScholarshipsList"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:ignore="TextSizeCheck" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_scholarshipslist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:backgroundTint="#FFD000"
             android:contentDescription="@string/sch_nextPage"
-            android:src="@drawable/sch_ic_downward"
-            android:layout_gravity="center"/>
+            android:src="@drawable/sch_ic_downward" />
     </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/bottom_nav"
+        tools:ignore="VisualLintBottomNav" />
 </LinearLayout>
