--- a/app/src/main/res/layout/sch_item_layout.xml
+++ b/app/src/main/res/layout/sch_item_layout.xml
@@ -40,7 +40,8 @@
                     android:gravity="center"
                     android:text="@string/title_PHINMAScholarship"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    tools:ignore="TextSizeCheck" />
 
                 <ImageButton
                     android:id="@+id/imageButton"
@@ -48,7 +49,7 @@
                     android:layout_height="fill_parent"
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/sch_ic_rightarrow"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
