Implement scholarship page with item lists and RecyclerView
- Added ScholarshipPage1 layout with a RecyclerView to display scholarship items.
- Created `MyAdapter` for managing and binding scholarship list data to the RecyclerView.
- Updated `strings.xml` with necessary string resources for the scholarship page.
- Applied updated themes for better UI consistency.
- Implemented RecyclerView for dynamic display of scholarship list items.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -234,7 +234,7 @@
         app:srcCompat="@drawable/modal" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/btn_scholarship"
         android:layout_width="52dp"
         android:layout_height="41dp"
         android:background="?android:attr/selectableItemBackground"
