--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -24,7 +24,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/map_upang_interior"
+            android:background="@drawable/map_upang_interior_rounded"
             android:orientation="vertical"
             android:padding="0dp">
 
@@ -95,8 +95,6 @@
     </com.google.android.material.card.MaterialCardView>
 
 
-    <!-- BottomNavigationView at the bottom of the screen -->
-
     <TextView
         android:id="@+id/textView15"
         android:layout_width="365dp"
@@ -115,7 +113,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
-        android:id="@+id/imageButton6"
+        android:id="@+id/mapDownButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -147,11 +145,5 @@
         app:layout_constraintVertical_bias="1.0"
         app:menu="@menu/bottom_nav" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
