--- a/app/src/main/res/layout/fragment_map_fifth_floor.xml
+++ b/app/src/main/res/layout/fragment_map_fifth_floor.xml
@@ -33,7 +33,8 @@
             android:scaleType="fitCenter" />
 
         <ImageButton
-            android:layout_width="match_parent"
+            android:id="@+id/btnBack"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/arrow_left"
             android:background="@null"
