Add interactive map for 3rd floor

--- a/app/src/main/res/layout/fragment_map_ground_floor.xml
+++ b/app/src/main/res/layout/fragment_map_ground_floor.xml
@@ -46,7 +46,7 @@
                 app:layout_constraintVertical_bias="0.5" />
 
 
-            <!--     INVISIBILE BUTTONS!!!!       -->
+            <!--     INVISIBLE BUTTONS!!!!       -->
             <Button
                 android:id="@+id/btnCanteen"
                 android:layout_width="64dp"
