--- a/app/src/main/res/layout/fragment_map_second_floor.xml
+++ b/app/src/main/res/layout/fragment_map_second_floor.xml
@@ -31,7 +31,6 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <!--     INVISIBILE BUTTONS!!!!       -->
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -45,6 +44,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
+            <!--     INVISIBLE BUTTONS!!!!       -->
             <Button
                 android:id="@+id/btn205"
                 android:layout_width="66dp"
